feat(admin): 管理员中心支持库和skill接口
